# atlas-session-lifecycle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SKILL.md  custom.md  install.sh  session-init.py  start.md
.claude-plugin/: plugin.json
.claude/skills/test-spec-gen/: SKILL.md
.claude/skills/test-spec-gen/templates/: test-spec.md  traceability.md
.github/workflows/: ci.yml  claude-review.yml  release-please.yml  review-gate.yml
docs/: pypi-setup.md  test-spec-gen-readme.md
docs/landing/: index.html
prompts/: bounty-agent.md  finality-agent.md  session-ops.md
skills/start/: SKILL.md
skills/stepback/: SKILL.md
src/: pyproject.toml
src/atlas_session/: __init__.py  license.py  server.py  stripe_client.py
src/atlas_session/common/: config.py  state.py
src/atlas_session/contract/: atlascoin.py  model.py  tools.py  verifier.py
src/atlas_session/session/: operations.py
templates/: CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-mdReference.md  CLAUDE-patterns.md  CLAUDE-soul-purpose.md  CLAUDE-troubleshooting.md
tests/: conftest.py
tests/integration/: test_contract_lifecycle.py  test_lifecycle_flows.py  test_mcp_protocol.py
tests/skills/test/: test_spec_gen_test.py
tests/unit/: test_common.py  test_contract_operations.py  test_license.py  test_session_operations.py  test_stripe_client.py
v1/: SKILL.md
