[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-session-lifecycle"
version = "4.1.0"
description = "MCP server for AI session lifecycle management — persistent memory, soul purpose tracking, and contract verification for Claude Code"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Atlas AI", email = "hello@atlas-ai.au"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.1,<3.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
atlas-session = "atlas_session.server:main"

[project.urls]
Homepage = "https://github.com/anombyte93/atlas-session-lifecycle"
Repository = "https://github.com/anombyte93/atlas-session-lifecycle"
Documentation = "https://github.com/anombyte93/atlas-session-lifecycle#readme"
Issues = "https://github.com/anombyte93/atlas-session-lifecycle/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["atlas_session"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
